k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: api-name
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: divy624/api:sim

        command: ["/bin/sh"]
        args:
        - -c
        - |
            python manage.py migrate &&
            python passwordset.py &&
            python manage.py runserver 0.0.0.0:8000

        ports:
        - containerPort: 8000
