k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: api-name
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30070
